<resources>
    <string name="app_name">Star Wars</string>
    <string name="birth_year">birth_year</string>
    <string name="homeworld">homeworld</string>
    <string name="gender">gender</string>
    <string name="starships">starships</string>
    <string name="films">films</string>
    <string name="url">url</string>
    <string name="name">name</string>
    <string name="hair_color">hair_color</string>
    <string name="skin_color">skin-color</string>
    <string name="eye_color">eye_color</string>
    <string name="height">height</string>
    <string name="mass">mass</string>
    <string name="linkUrl">linkUrl</string>
    <string name="imageIcon">imageIcon</string>
    <string name="character_name">Character Name</string>

    <string name="bottom_navigation_menu_favorites">Films</string>
    <string name="bottom_navigation_menu_people">People</string>
    <string name="bottom_navigation_menu_search">Search</string>
    <string name="darth_vader">Darth Vader</string>
    <string name="image_detail">Image Detail</string>
    <string name="release_date">release_date</string>
    <string name="director">director</string>
    <string name="producer">producer</string>
    <string name="opening_crawl">opening_crawl</string>
    <string name="title">title</string>
    <string name="characters">characters</string>
    <string name="planets">planets</string>
    <string name="species">species</string>
    <string name="vehicles">vehicles</string>
    <string name="residents">residents</string>
    <string name="population">population</string>
    <string name="surface_water">surface_water</string>
    <string name="terrain">terrain</string>
    <string name="gravity">gravity</string>
    <string name="climate">climate</string>
    <string name="diameter">diameter</string>
    <string name="orbital_period">orbital_period</string>
    <string name="rotation_period">rotation_period</string>
    <string name="cargo_capacity">cargo_capacity</string>
    <string name="consumables">consumables</string>
    <string name="passengers">passengers</string>
    <string name="crew">crew</string>
    <string name="max_atmosphering_speed">max_atmosphering_speed</string>
    <string name="length">length</string>
    <string name="cost_in_credits">cost_in_credits</string>
    <string name="manufacturer">manufacturer</string>
    <string name="model">model</string>
    <string name="hyperdrive_rating">hyperdrive_rating</string>
    <string name="MGLT">MGLT</string>
    <string name="starship_class">starship_class</string>
    <string name="pilots">pilots</string>
    <string name="action_camera">action_camera</string>
    <string name="action_settings">action_settings</string>
    <string name="description">description</string>
    <string name="author">author</string>
    <string name="hint">hint</string>
    <string name="action_infos">action_infos</string>
</resources>
