<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_favorites"
        android:enabled="true"
        android:icon="@android:drawable/btn_star_big_on"
        android:title="@string/bottom_navigation_menu_favorites"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_people"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/bottom_navigation_menu_people"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_search"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/bottom_navigation_menu_search"
        app:showAsAction="ifRoom" />
</menu>