<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_activityMain2"
    tools:context=".view.Main3Activity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="112dp"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="176dp"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="@dimen/article_keylines"
            app:expandedTitleMarginStart="@dimen/md_keylines"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/film_poster"
                android:layout_width="match_parent"
                android:layout_height="121dp"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:context=".view.Main3Activity"
            tools:showIn="@layout/activity_main3">

            <TextView
                android:id="@+id/title"
                android:layout_width="300sp"
                android:layout_height="50sp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/starwars"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/title"
                android:textAlignment="center"
                android:textColor="@color/colorAccent_activityMain2"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.494"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/director"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:layout_marginEnd="8dp"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/director"
                android:textAlignment="center"
                android:textColor="@color/colorAccent_activityMain2"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@+id/release_date"
                app:layout_constraintHorizontal_bias="0.636"
                app:layout_constraintStart_toStartOf="@+id/release_date"
                app:layout_constraintTop_toBottomOf="@+id/release_date" />

            <TextView
                android:id="@+id/producer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:background="@color/textView_background"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/producer"
                android:textAlignment="center"
                android:textColor="@color/colorAccent_activityMain2"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@+id/director"
                app:layout_constraintStart_toStartOf="@+id/director"
                app:layout_constraintTop_toBottomOf="@+id/director" />

            <TextView
                android:id="@+id/release_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/release_date"
                android:textAlignment="center"
                android:textColor="@color/colorAccent_activityMain2"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@+id/title"
                app:layout_constraintStart_toStartOf="@+id/title"
                app:layout_constraintTop_toBottomOf="@+id/title" />

            <TextView
                android:id="@+id/opening_crawl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/opening_crawl"
                android:textAlignment="center"
                android:textColor="@color/colorAccent_activityMain2"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@+id/producer"
                app:layout_constraintHorizontal_bias="0.511"
                app:layout_constraintStart_toStartOf="@+id/producer"
                app:layout_constraintTop_toBottomOf="@+id/producer" />

            <TextView
                android:id="@+id/characters"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="75dp"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/characters"
                android:textAlignment="center"
                android:textColor="@color/colorAccent_activityMain2"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@+id/opening_crawl"
                app:layout_constraintStart_toStartOf="@+id/opening_crawl"
                app:layout_constraintTop_toBottomOf="@+id/opening_crawl" />

            <ImageView
                android:id="@+id/darth_vader"
                android:layout_width="300sp"
                android:layout_height="300sp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />



        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>